# wab-bot

./: .gitignore  Cargo.toml
car/: Cargo.toml
car-core/: Cargo.toml
car-core/src/: bot.rs  command.rs  context.rs  group.rs  lib.rs  parameter.rs
car-core/src/command/: argument.rs  command.rs  context.rs  group.rs  parameter.rs
car-core/src/util/: quote.rs
car-macro/: Cargo.toml
car-macro/src/: lib.rs  parse.rs
car/src/: lib.rs
src/: main.rs
wab/: Cargo.toml
wab-core/: Cargo.toml
wab-core/src/: argument.rs  bot.rs  client.rs  command.rs  command_handler.rs  context.rs  event.rs  group.rs  lib.rs  parameter.rs  state.rs
wab-macro/: Cargo.toml
wab-macro/src/: lib.rs  parse.rs
wab/src/: lib.rs
