[package]
name = "wab-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wab = { path = "./wab" }
tokio = { version = "1.33.0", features = ["full"] }
typemap = "0.3.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
twilight-cache-inmemory = "0.15.4"
twilight-gateway = "0.15.4"